question page design 2

--- a/quiz.html
+++ b/quiz.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    <div id="quiz-container">
+
+    <div id="quizz">
+        <img src="https://t3.ftcdn.net/jpg/05/69/96/48/360_F_569964847_Wa3tNpPYRGABpplPGSFT3LLB7E2wU0jb.jpg" alt="logo"
+            style="width: 8%; position: relative; left: 20px;">
+        <div id="quiz-container">
+        </div>
     </div>
     <script src="scripts.js"></script>
 </body>
