--- a/quiz.html
+++ b/quiz.html
@@ -11,9 +11,11 @@
 <body>
 
     <div id="quizz">
-        <img src="https://t3.ftcdn.net/jpg/05/69/96/48/360_F_569964847_Wa3tNpPYRGABpplPGSFT3LLB7E2wU0jb.jpg" alt="logo"
-            style="width: 8%; position: relative; left: 20px;">
-        <div id="quiz-container">
+        <div>
+            <img src="https://t3.ftcdn.net/jpg/05/69/96/48/360_F_569964847_Wa3tNpPYRGABpplPGSFT3LLB7E2wU0jb.jpg"
+                alt="logo" style="width: 20%; position: relative; left: 20px;">
+            <div id="quiz-container">
+            </div>
         </div>
     </div>
     <script src="scripts.js"></script>
