--- a/home.html
+++ b/home.html
@@ -12,10 +12,15 @@
 <body>
 
     <div id="homepage-container">
-        <div style="display:  flex; justify-content: space-between; align-items: center;">
+        <div style="display:flex; justify-content: space-between; align-items: center;">
             <img src="https://t3.ftcdn.net/jpg/05/69/96/48/360_F_569964847_Wa3tNpPYRGABpplPGSFT3LLB7E2wU0jb.jpg"
                 alt="logo" style="width: 10%; position: relative; left: 20px;">
-            <div id="user-name" style="text-align: center; font-size: 24px; font-family: sans-serif;"></div>
+            <div style="display:flex; justify-content: center; align-items: center;">
+                <div id="user-name"
+                    style="text-align: center;font-size: 28px; font-family: sans-serif; font-weight: 600; color: #8a98f1; margin-right: 5px;">
+                </div>
+                <button id="logout-button">Logout</button>
+            </div>
         </div>
         <div class="all-topic">
             <h4 style="font-size: 19px;margin-bottom: 2%; color: #333;">Choose one from categories below & see how many
@@ -64,6 +69,11 @@
             if (userName) {
                 document.getElementById('user-name').innerText = `Welcome, ${userName}!`;
             }
+
+            document.getElementById('logout-button').addEventListener('click', () => {
+                localStorage.removeItem('userName');
+                window.location.href = 'index.html';
+            });
         });
         function startQuiz(topic) {
             window.location.href = `quiz.html?topic=${topic}`;
