--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="home">
         <img src="https://t3.ftcdn.net/jpg/05/69/96/48/360_F_569964847_Wa3tNpPYRGABpplPGSFT3LLB7E2wU0jb.jpg" alt="logo"
-            style="width: 12%;">
-        <div style=" display: flex; align-items: center; flex-direction: column;">
+            style="width: 12%; margin-left: 1.5%;">
+        <div style=" display: flex; align-items: center; flex-direction: column; ">
             <div class="login">
                 <h1>Welcome to the Quiz</h1>
                 <form id="nameForm">
@@ -22,12 +22,12 @@
                     <button type="submit">Start Quiz</button>
                 </form>
             </div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#e7e8f3" fill-opacity="1"
+                    d="M0,32L17.1,48C34.3,64,69,96,103,128C137.1,160,171,192,206,213.3C240,235,274,245,309,229.3C342.9,213,377,171,411,138.7C445.7,107,480,85,514,106.7C548.6,128,583,192,617,192C651.4,192,686,128,720,112C754.3,96,789,128,823,133.3C857.1,139,891,117,926,112C960,107,994,117,1029,122.7C1062.9,128,1097,128,1131,149.3C1165.7,171,1200,213,1234,208C1268.6,203,1303,149,1337,117.3C1371.4,85,1406,75,1423,69.3L1440,64L1440,320L1422.9,320C1405.7,320,1371,320,1337,320C1302.9,320,1269,320,1234,320C1200,320,1166,320,1131,320C1097.1,320,1063,320,1029,320C994.3,320,960,320,926,320C891.4,320,857,320,823,320C788.6,320,754,320,720,320C685.7,320,651,320,617,320C582.9,320,549,320,514,320C480,320,446,320,411,320C377.1,320,343,320,309,320C274.3,320,240,320,206,320C171.4,320,137,320,103,320C68.6,320,34,320,17,320L0,320Z">
+                </path>
+            </svg>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#e7e8f3" fill-opacity="1"
-                d="M0,32L17.1,48C34.3,64,69,96,103,128C137.1,160,171,192,206,213.3C240,235,274,245,309,229.3C342.9,213,377,171,411,138.7C445.7,107,480,85,514,106.7C548.6,128,583,192,617,192C651.4,192,686,128,720,112C754.3,96,789,128,823,133.3C857.1,139,891,117,926,112C960,107,994,117,1029,122.7C1062.9,128,1097,128,1131,149.3C1165.7,171,1200,213,1234,208C1268.6,203,1303,149,1337,117.3C1371.4,85,1406,75,1423,69.3L1440,64L1440,320L1422.9,320C1405.7,320,1371,320,1337,320C1302.9,320,1269,320,1234,320C1200,320,1166,320,1131,320C1097.1,320,1063,320,1029,320C994.3,320,960,320,926,320C891.4,320,857,320,823,320C788.6,320,754,320,720,320C685.7,320,651,320,617,320C582.9,320,549,320,514,320C480,320,446,320,411,320C377.1,320,343,320,309,320C274.3,320,240,320,206,320C171.4,320,137,320,103,320C68.6,320,34,320,17,320L0,320Z">
-            </path>
-        </svg>
     </div>
     <script>
         document.getElementById('nameForm').addEventListener('submit', function (event) {
