--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz app</title>
+    <title>Quiz App</title>
     <link rel="stylesheet" href="home.css">
     <script src="https://kit.fontawesome.com/3f8256dd02.js" crossorigin="anonymous"></script>
 </head>
