input autofocus added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1>Welcome to the Quiz</h1>
                 <form id="nameForm">
                     <label for="userName">Enter your name:</label>
-                    <input type="text" id="userName" name="userName" required>
+                    <input type="text" id="userName" name="userName" autofocus required>
                     <br>
                     <button type="submit">Start Quiz</button>
                 </form>
