--- a/quiz.html
+++ b/quiz.html
@@ -13,13 +13,18 @@
 <body>
 
     <div id="quizz">
-        <div>
+        <div id="nav" style=" display: flex; justify-content: space-between; align-items: center; width: 100%;">
             <img src="https://t3.ftcdn.net/jpg/05/69/96/48/360_F_569964847_Wa3tNpPYRGABpplPGSFT3LLB7E2wU0jb.jpg"
-                alt="logo" style="width: 20%; position: relative; left: 20px;">
-            <div id="quiz-container">
-            </div>
+                alt="logo" style="width: 8%; position: relative; left: 20px;">
+            <div id="user-info">
 
+            </div>
         </div>
+
+        <div id="quiz-container">
+        </div>
+
+
 
     </div>
     <script src="scripts.js"></script>
