--- a/quiz.html
+++ b/quiz.html
@@ -13,7 +13,8 @@
 <body>
 
     <div id="quizz">
-        <div id="nav" style=" display: flex; justify-content: space-between; align-items: center; width: 100%;">
+        <div id="nav"
+            style=" display: flex; justify-content: space-between; align-items: center; width: 100%; text-align: center;">
             <img src="https://t3.ftcdn.net/jpg/05/69/96/48/360_F_569964847_Wa3tNpPYRGABpplPGSFT3LLB7E2wU0jb.jpg"
                 alt="logo" style="width: 8%; position: relative; left: 20px;">
             <div id="user-info">
@@ -25,8 +26,9 @@
         </div>
 
 
-
     </div>
+    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+
     <script src="scripts.js"></script>
 </body>
 
